syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeymanagerGRPC";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeymanagerGRPCService {
  rpc cria (CreateKeyRequest) returns (CreateKeyResponse) {}
}

enum TipoChave {
  CPF = 0;
  CELULAR = 1;
  EMAIL = 2;
  ALEATORIO = 3;
}

enum TipoConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message CreateKeyRequest {
  string numero = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message CreateKeyResponse {
  string id = 1;
}